  use of "label" option for TK.Label, had to be renamed to "title".
  
o MeterBase: Title and value label are real widgets now. Their name changed
  so they don't have an underscore any more:
  _label -> label and _title -> title

o MultiMeter: Title is a ChildWidget now. Name changed from _title to title.
  
o ValueButton: _bar, _base and marker were removed in favour of new Scale ChildWidget.


API Changes
===========

o The return value of event handlers is processed differently now.
  Any return value which is not undefined will interrupt the execution of
  any other handlers. fire_event will return that value.
  This change was necessary because some DOM events use values !== false for
  cancellation. It also makes more complex signalling logic possible for events.
  This is used by the new DragCapture class.
  
o Circular elements switched the option for the opening angle from "basis"
  to "angle". This is to separate the distance to drag on Knob and ValueKnob
  from the angle.
  
o Window: All sub elements are real widgets now using the new ChildWidget API.
  There's only header and footer element left, header_left, header_center, header_right,
  footer_left, footer_center and footer_right are removed.
  The options are reduced to only header and footer, too. Setting one of them
  to false removes the element from the window. It's not possible to set
  simple strings without being wrapped in an array anymore.
  
  There's a new element to be added to header or footer: "resize".
  
  The option "resizable" was dropped in favour of setting "resize"
  in "header" or "footer".

o Window: "resize" handle had to be renamed since it overwrote the resize function
  handle. New identifier for the resize handle is "size".
  
  TODO: startdrag and stopdrag events aren't fired in TK.Drag. This stops
  Window from un-maximizing and other things.
  
Style Changes
=============

* Flex-Layout: The following widgets have a changed layout based on flex-box and grid: