@@ -44,6 +44,7 @@ o MultiMeter: Title is a ChildWidget now. Name changed from _title to title.
   
 o ValueButton: _bar, _base and marker were removed in favour of new Scale ChildWidget.
 
+o Value: new option "readonly"
 
 API Changes
 ===========
